[package]
name = "crypto-playground"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "example_ring"
path = "src/ring/main.rs"

[[bin]]
name = "example_multi"
path = "src/multi/main.rs"

[dependencies]
aead = "0.5.2"
anyhow = "1.0.99"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
hkdf = "0.12.4"
ring = "0.17.14"
sha2 = "0.10.9"
x25519-dalek = "2.0.1"
